<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
        <item
                android:id="@+id/nav_graph"
                android:icon="@drawable/ic_graph"
                android:title="@string/graph" />
        <item
                android:id="@+id/nav_alarm"
                android:icon="@drawable/ic_alarm"
                android:title="@string/alarm" />
        <item
                android:id="@+id/music"
                android:icon="@drawable/ic_tab_music"
                android:title="@string/music" />

    </group>

</menu>